# caffe

./: .gitignore  CMakeLists.txt  CaffeConfig.cmake  CaffeTargets.cmake  INSTALL.md  Makefile  README.md  caffe_config.h  caffe_python_time  cmake_install.cmake  driving_img_mean.binaryproto  generate_tags.sh  prep_machine.sh  prep_opencv.sh  pyconfig.h  shuffled_bb_labels_test.txt  vwrap
cmake/: CaffeConfig.cmake  Dependencies.cmake
data/ilsvrc12/: extract_locally.sh
docs/: Makefile  cmake_install.cmake
examples/: Makefile  cmake_install.cmake  filter_visualization_car_deeppy.ipynb  filter_visualization_driving.ipynb  filter_visualization_driving_softmax.ipynb  filter_visualization_new_driving_softmax.ipynb
examples/imagenet/: create_gray_imagenet.sh
include/caffe/: blob.hpp  caffe.hpp  common.hpp  data_layers.hpp  filler.hpp  loss_layers.hpp  multilane_label_layer.hpp  net.hpp  neuron_layers.hpp  solver.hpp  vision_layers.hpp
include/caffe/util/: io.hpp  mpi.hpp  plot.hpp
matlab/: Makefile  cmake_install.cmake
models/brody/: deploy.prototxt  deploy_deeppy.prototxt  deploy_softmax.prototxt  solver.prototxt  solver_driving.prototxt  solver_driving_softmax.prototxt  solver_normalization.prototxt  train_val_brody.prototxt  train_val_driving.prototxt  train_val_driving_normalization.prototxt  train_val_driving_softmax.prototxt  train_val_dummy.prototxt  train_val_old_alexoverfeat.prototxt
models/bvlc_reference_caffenet/: solver.prototxt  train_val.prototxt
models/drive_net/: deploy.prototxt  solver.prototxt  solver_normalization.prototxt  train_val_driving_normalization.prototxt
models/lane/: deploy.prototxt  solver.prototxt  train_val_lane.prototxt  train_val_lane_pretrained.prototxt  train_val_lane_pretrained_bigmask.prototxt
python/: CMakeLists.txt  Makefile  cmake_install.cmake  convert_driving_data.py  convert_mean.py  driving_utils.py  evaluate_result.py  store_results.py
python/caffe/: classifier.py  draw.py
python/schedule_creators/: create_caffe_multilane_schedule.py  create_caffe_multilane_schedule_Vshape.py  create_caffe_multilane_schedule_nodistort.py  create_caffe_multilane_test_schedule.py  create_gps_data.py  create_lane_data.py  create_lane_data_old.py  create_q50_multilane_schedule.py  create_q50_schedule.py  create_q50_schedule_hard.py  create_q50_test_schedule.py  create_schedule.py  create_schedule_lane_count.py  create_schedule_nodistort.py  create_schedule_unshuffled.py  create_test_schedule.py  q50_exclude_list
src/caffe/: .__afs6319  CMakeLists.txt  Makefile  blob.cpp  cmake_install.cmake  common.cpp  data_transformer.cpp  layer_factory.cpp  net.cpp  solver.cpp
src/caffe/layers/: base_data_layer.cpp  blob_writer_layer.cpp  concat_layer.cpp  cudnn_conv_layer.cu  data_layer.cpp  driving_data_layer.cpp  driving_data_layer.cu  dropout_fixed_layer.cpp  dropout_fixed_layer.cu  l1_loss_layer.cpp  l1_loss_layer.cu  lrn_fixed_layer.cpp  lrn_fixed_layer.cu  lrnk_layer.cpp  lrnk_layer.cu  memory_data_layer.cpp  (+8 more)
src/gtest/: Makefile  cmake_install.cmake
tools/: Makefile  caffe.cpp  cmake_install.cmake  convert_detection_label.cpp  convert_driving_data.cpp
(+22 files in other folders)
